@@ -29,7 +29,7 @@ requires(
     'CPAN::Meta'                 => 0,
     'ExtUtils::MakeMaker'        => 6.56,
     'File::Slurp'                => 0,
-    'Getopt::Long::Descriptive'  => 0.097,
+    'Getopt::Long::Descriptive'  => 0,
     'Hash::Util'                 => 0,
     'IO'                         => 0,
     'Module::CoreList'           => 0,
